RESOLVED FIXED201960
WebSocketStream does not need a SessionID
https://bugs.webkit.org/show_bug.cgi?id=201960
Summary WebSocketStream does not need a SessionID
Chris Dumez
Reported 2019-09-18 18:53:30 PDT
WebSocketStream does not need a SessionID, now that we have a single session per WebProcess.
Attachments
Patch (7.15 KB, patch)
2019-09-18 18:54 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-09-18 18:54:41 PDT
Geoffrey Garen
Comment 2 2019-09-18 19:29:33 PDT
Comment on attachment 379093 [details] Patch r=me
WebKit Commit Bot
Comment 3 2019-09-18 20:45:12 PDT
Comment on attachment 379093 [details] Patch Clearing flags on attachment: 379093 Committed r250079: <https://trac.webkit.org/changeset/250079>
WebKit Commit Bot
Comment 4 2019-09-18 20:45:14 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2019-09-18 20:46:51 PDT
Note You need to log in before you can comment on or make changes to this bug.