WebSocketStream does not need a SessionID https://bugs.webkit.org/show_bug.cgi?id=201960

Reviewed by Geoffrey Garen.

WebSocketStream does not need a SessionID, now that we have a single session per WebProcess.

Source/WebCore:

* platform/network/cf/SocketStreamHandleImpl.h:
* platform/network/cf/SocketStreamHandleImplCFNet.cpp:
(WebCore::SocketStreamHandleImpl::SocketStreamHandleImpl):

Source/WebKit:

* WebProcess/Network/WebSocketProvider.cpp:
(WebKit::WebSocketProvider::createSocketStreamHandle):
* WebProcess/Network/WebSocketStream.cpp:
(WebKit::WebSocketStream::create):
(WebKit::WebSocketStream::WebSocketStream):
* WebProcess/Network/WebSocketStream.h:


Canonical link: https://commits.webkit.org/215597@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250079 268f45cc-cd09-0410-ab3c-d52691b4dbfc