Source/WebKit/WebProcess/Network/WebSocketStream.cpp
@@ -35,7 +35,6 @@
 #include <WebCore/CookieRequestHeaderFieldProxy.h>
 #include <WebCore/SocketStreamError.h>
 #include <WebCore/SocketStreamHandleClient.h>
-#include <pal/SessionID.h>
 #include <wtf/NeverDestroyed.h>
 
 namespace WebKit {
@@ -77,12 +76,12 @@ void WebSocketStream::networkProcessCrashed()
     globalWebSocketStreamMap().clear();
 }
 
-Ref<WebSocketStream> WebSocketStream::create(const URL& url, SocketStreamHandleClient& client, PAL::SessionID sessionID, const String& credentialPartition)
+Ref<WebSocketStream> WebSocketStream::create(const URL& url, SocketStreamHandleClient& client, const String& credentialPartition)
 {
-    return adoptRef(*new WebSocketStream(url, client, sessionID, credentialPartition));
+    return adoptRef(*new WebSocketStream(url, client, credentialPartition));
 }
 
-WebSocketStream::WebSocketStream(const URL& url, WebCore::SocketStreamHandleClient& client, PAL::SessionID, const String& cachePartition)
+WebSocketStream::WebSocketStream(const URL& url, WebCore::SocketStreamHandleClient& client, const String& cachePartition)
     : SocketStreamHandle(url, client)
     , m_client(client)
 {
